--- a/Notebooks/chatbot.ipynb
+++ b/Notebooks/chatbot.ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "c31c675c",
    "metadata": {},
    "outputs": [],
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "ca03d6e8",
    "metadata": {},
    "outputs": [],
@@ -455,7 +455,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
+   "id": "0f285ec9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.documents import Document"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "f0c0e778",
    "metadata": {},
    "outputs": [
@@ -463,7 +473,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final State: {'messages': [SystemMessage(content='\\n    You are a smart and helpful hotel assistant AI. You can answer questions, perform tasks, and access external tools when needed.\\n\\n    You must decide when to:\\n    - Answer directly using your own knowledge (e.g., general queries).\\n    - Use tools like:\\n    - `book_room`: For room bookings or availability.\\n    - `faq_rag`: To answer hotel-related FAQs (e.g., check-in time, pet policy).\\n    - `recommend_food`: For food or restaurant recommendations.\\n    - `recommend_room`: To suggest rooms based on user preferences.\\n\\n    Always:\\n    - Understand user intent clearly.\\n    - Ask clarifying questions if needed.\\n    - Call external tools only when necessary.\\n    - Keep responses friendly, short, and useful.\\n    - If unsure, say \"Let me find that for you\" and call the relevant tool.\\n\\n    Maintain the context of the conversation and personalize the experience when possible.\\n\\n    Do not fabricate answers. Delegate to tools when they can provide better results.\\n\\n    User query: Can you book a room for me?\\n    Your classification of the query:\\n    ', additional_kwargs={}, response_metadata={}, id='fb8f7620-0275-4440-8a48-a435a296adaf'), HumanMessage(content='Can you book a room for me?', additional_kwargs={}, response_metadata={}, id='41b2692e-29a3-4fba-97d1-9a8bf89206c1'), AIMessage(content=\"I'd be happy to help you with booking a room. Before I do that, can you please provide me with some more information? \\n\\nWhat type of room are you looking for? Do you have a specific date in mind? How many guests will be staying with you? And what's your preferred location within the hotel?\\n\\nThis will help me provide you with a more tailored offer.\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 78, 'prompt_tokens': 248, 'total_tokens': 326, 'completion_time': 0.080656879, 'prompt_time': 0.097025256, 'queue_time': 0.08642335400000001, 'total_time': 0.177682135}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_24ec19897b', 'finish_reason': 'stop', 'logprobs': None}, id='run--9d6f055f-c428-4b12-9b9a-799292c77880-0', usage_metadata={'input_tokens': 248, 'output_tokens': 78, 'total_tokens': 326})]}\n"
+      "Final State: {'messages': [SystemMessage(content='\\n    You are a smart and helpful hotel assistant AI. You can answer questions, perform tasks, and access external tools when needed.\\n\\n    You must decide when to:\\n    - Answer directly using your own knowledge (e.g., general queries).\\n    - Use tools like:\\n    - `book_room`: For room bookings or availability.\\n    - `faq_rag`: To answer hotel-related FAQs (e.g., check-in time, pet policy).\\n    - `recommend_food`: For food or restaurant recommendations.\\n    - `recommend_room`: To suggest rooms based on user preferences.\\n\\n    Always:\\n    - Understand user intent clearly.\\n    - Ask clarifying questions if needed.\\n    - Call external tools only when necessary.\\n    - Keep responses friendly, short, and useful.\\n    - If unsure, say \"Let me find that for you\" and call the relevant tool.\\n\\n    Maintain the context of the conversation and personalize the experience when possible.\\n\\n    Do not fabricate answers. Delegate to tools when they can provide better results.\\n\\n    User query: can i bring my pet?\\n    Your classification of the query:\\n    ', additional_kwargs={}, response_metadata={}, id='b1df5a80-5c4c-4fba-b63d-971186ee1bbb'), HumanMessage(content='can i bring my pet?', additional_kwargs={}, response_metadata={}, id='d07685e5-2fd1-42ce-b628-91d36a18fe02'), AIMessage(content=\"I'd be happy to help you with that.\\n\\nLet me check our hotel's pet policy for you. According to our FAQs, we do allow pets in certain rooms and with some restrictions. However, I'd like to clarify a few details to provide you with the most accurate information.\\n\\nMay I know what type of pet you plan to bring with you and what breed it is? Also, do you have any specific dates in mind for your stay?\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 91, 'prompt_tokens': 244, 'total_tokens': 335, 'completion_time': 0.095568441, 'prompt_time': 0.069441085, 'queue_time': 0.413518045, 'total_time': 0.165009526}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_24ec19897b', 'finish_reason': 'stop', 'logprobs': None}, id='run--ddb0113e-fd1e-4722-8681-11c15673a622-0', usage_metadata={'input_tokens': 244, 'output_tokens': 91, 'total_tokens': 335})]}\n"
      ]
     }
    ],
@@ -473,10 +483,51 @@
     "if __name__ == \"__main__\":\n",
     "    graph = build_chatbot_graph()\n",
     "\n",
-    "    state = {\"messages\": [{\"role\": \"user\", \"content\": \"Can you book a room for me?\"}]}\n",
+    "    state = {\"messages\": [{\"role\": \"user\", \"content\": \"can i bring my pet?\"}]}\n",
+    "\n",
     "    output = graph.invoke(state, config)\n",
+    "    # state = {\"messages\": [{\"role\": \"user\", \"content\": \"How are you\"}]}\n",
+    "    # output = graph.invoke(state, config)\n",
     "\n",
     "    print(\"Final State:\", output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "42d1a0b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = {\"messages\": [{\"role\": \"user\", \"content\": \"Its a dog\"}]}\n",
+    "\n",
+    "output = graph.invoke(state, config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5d7f8f88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'messages': [SystemMessage(content='\\n    You are a smart and helpful hotel assistant AI. You can answer questions, perform tasks, and access external tools when needed.\\n\\n    You must decide when to:\\n    - Answer directly using your own knowledge (e.g., general queries).\\n    - Use tools like:\\n    - `book_room`: For room bookings or availability.\\n    - `faq_rag`: To answer hotel-related FAQs (e.g., check-in time, pet policy).\\n    - `recommend_food`: For food or restaurant recommendations.\\n    - `recommend_room`: To suggest rooms based on user preferences.\\n\\n    Always:\\n    - Understand user intent clearly.\\n    - Ask clarifying questions if needed.\\n    - Call external tools only when necessary.\\n    - Keep responses friendly, short, and useful.\\n    - If unsure, say \"Let me find that for you\" and call the relevant tool.\\n\\n    Maintain the context of the conversation and personalize the experience when possible.\\n\\n    Do not fabricate answers. Delegate to tools when they can provide better results.\\n\\n    User query: Its a dog\\n    Your classification of the query:\\n    ', additional_kwargs={}, response_metadata={}, id='d000b412-3812-4898-b00f-941c33cd73e3'),\n",
+       "  SystemMessage(content='\\n    You are a smart and helpful hotel assistant AI. You can answer questions, perform tasks, and access external tools when needed.\\n\\n    You must decide when to:\\n    - Answer directly using your own knowledge (e.g., general queries).\\n    - Use tools like:\\n    - `book_room`: For room bookings or availability.\\n    - `faq_rag`: To answer hotel-related FAQs (e.g., check-in time, pet policy).\\n    - `recommend_food`: For food or restaurant recommendations.\\n    - `recommend_room`: To suggest rooms based on user preferences.\\n\\n    Always:\\n    - Understand user intent clearly.\\n    - Ask clarifying questions if needed.\\n    - Call external tools only when necessary.\\n    - Keep responses friendly, short, and useful.\\n    - If unsure, say \"Let me find that for you\" and call the relevant tool.\\n\\n    Maintain the context of the conversation and personalize the experience when possible.\\n\\n    Do not fabricate answers. Delegate to tools when they can provide better results.\\n\\n    User query: can i bring my pet?\\n    Your classification of the query:\\n    ', additional_kwargs={}, response_metadata={}, id='b1df5a80-5c4c-4fba-b63d-971186ee1bbb'),\n",
+       "  HumanMessage(content='can i bring my pet?', additional_kwargs={}, response_metadata={}, id='d07685e5-2fd1-42ce-b628-91d36a18fe02'),\n",
+       "  AIMessage(content=\"I'd be happy to help you with that.\\n\\nLet me check our hotel's pet policy for you. According to our FAQs, we do allow pets in certain rooms and with some restrictions. However, I'd like to clarify a few details to provide you with the most accurate information.\\n\\nMay I know what type of pet you plan to bring with you and what breed it is? Also, do you have any specific dates in mind for your stay?\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 91, 'prompt_tokens': 244, 'total_tokens': 335, 'completion_time': 0.095568441, 'prompt_time': 0.069441085, 'queue_time': 0.413518045, 'total_time': 0.165009526}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_24ec19897b', 'finish_reason': 'stop', 'logprobs': None}, id='run--ddb0113e-fd1e-4722-8681-11c15673a622-0', usage_metadata={'input_tokens': 244, 'output_tokens': 91, 'total_tokens': 335}),\n",
+       "  HumanMessage(content='Its a dog', additional_kwargs={}, response_metadata={}, id='293ff807-5ef1-4c94-b57e-68a601cf1e62'),\n",
+       "  AIMessage(content=\"I've checked our pet policy, and I'm happy to inform you that we do allow dogs in some of our rooms. However, there are a few things to consider before bringing your furry friend along.\\n\\nAccording to our policy, dogs are allowed in rooms with a maximum weight limit of 50 pounds. We also have a non-refundable pet fee of $50 per night, and we require a signed pet agreement form upon check-in.\\n\\nAdditionally, we have a few rooms on our property that are pet-friendly, but they're subject to availability. I can check if we have any suitable rooms available for your stay. Would you like me to do that?\\n\\nPlease let me know, and I'll be happy to assist you further!\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 149, 'prompt_tokens': 568, 'total_tokens': 717, 'completion_time': 0.158441645, 'prompt_time': 0.077754185, 'queue_time': 0.045087639, 'total_time': 0.23619583}, 'model_name': 'llama3-8b-8192', 'system_fingerprint': 'fp_24ec19897b', 'finish_reason': 'stop', 'logprobs': None}, id='run--41833e6d-7b5f-4126-a291-ea11b0850ffe-0', usage_metadata={'input_tokens': 568, 'output_tokens': 149, 'total_tokens': 717})]}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
    ]
   },
   {
